--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,8 @@ body {
 }
 
 #header .img {
-  margin: 5px;
+  margin: 2px 5px 2px 2px;
+  border: 3px solid #eee;
   -moz-border-radius: 3px; 
   -webkit-border-radius:  3px; 
   border-radius: 3px 3px 3px 3px; 
@@ -104,3 +105,5 @@ pre code {
 pre {
   margin: 1em 2em 1em 2em;
 }
+
+#seo { display: none; }
