--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,19 @@ h2 {
   font-size: 1.8em;
 }
 
+#dsq-content > div.dsq-options, #dsq-content > div#dsq-global-toolbar, #dsq-content div.dsq-attach-media {
+  display: none;
+}
+
+div#content > hr {
+  margin: 3em 0 3em 0;
+}
+
+div#content > a.dsq-brlink {
+  float: right;
+}
+
+
 /*
 
 Beneath here lies styling for syntax highlighting.
