integrate new splash page, move blog to /blog, and begin to work on the project timeline

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>lloyd.io - {{page.title}}</title>
-  <link rel="stylesheet" href="{{site.url}}/css/style.css"  type="text/css">
+  <link rel="stylesheet" href="/css/style.css"  type="text/css">
   <link title="lloyd.io: Lloyd Hilaiel's's blog" type="application/atom+xml" href="{{site.url}}/feed.atom" rel="alternate">
   <meta name="ttw" content="35t2p1r" />
 </head>
