--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,9 @@
   <div class="title">{{ page.title }}</div>
   <div class="date">{{ page.date }}</div>
   <div class="post">{{ content }}</div>
-  <a name="discussion">
-    <div id="disqus_thread"></div>
+  <div class="share">
+    <a href="https://twitter.com/share" class="twitter-share-button" data-via="lloydhilaiel" data-size="large">Tweet</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   </a>
 </div>
 
