--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,9 +10,8 @@
 <div id="about">
   <div>
   <p>
-    <b>lloyd.io</b> is the personal website of Lloyd Hilaiel, a hacker who
-    works for <a href="http://mozilla.org">Mozilla</a>, lives in Denver, and
-    is interested in web technologies.
+    <b>lloyd.io</b> is the personal website of Lloyd Hilaiel, a software engineer who
+    works for <a href="https://www.ozlo.org">Team Ozlo</a> and lives in Denver.
   </p>
 
   <p>
