fix employer URL

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
   <div>
   <p>
     <b>lloyd.io</b> is the personal website of Lloyd Hilaiel, a software engineer who
-    works for <a href="https://www.ozlo.org">Team Ozlo</a> and lives in Denver.
+    works for <a href="https://www.ozlo.com">Team Ozlo</a> and lives in Denver.
   </p>
 
   <p>
